--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_URL=postgresql+asyncpg://postgres:12345678@localhost:5432/weather_db
-OPENWEATHER_API_KEY=т9c1a13beabb15adc16d49decff8c9ffd
+OPENWEATHER_API_KEY=9c1a13beabb15adc16d49decff8c9ffd
